test/failing/badlist1.trunnel

struct x {
  u16 a IN [ 1, 2, 100000 ];
}

